# sdl-ecs-example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  conanfile.txt  imgui.ini
cmake/: CodeCoverage.cmake  FindSDL2.cmake  StaticAnalyzers.cmake
gtest/: CMakeLists.txt  cwt_gtest.hpp  main.cc  test.cc
src/: CMakeLists.txt  bird.hpp.in  game.hpp  main.cpp  neural_net.hpp  pch.hpp  sdl_window.hpp
src/assets/: assets.hpp.in
src/cwt_game_engine/: CMakeLists.txt  engine.cpp  engine.hpp  game.cpp  game.hpp  window.hpp
src/engine/: CMakeLists.txt  engine.hpp  pch.hpp  window.hpp
src/event/: event.hpp  window_events.hpp
src/playground/: CMakeLists.txt  main.cpp
